# tetris-game

./: .gitignore  CMakeLists.txt  LISENCE.txt  README.md  block.c  board.c  logic.c  main.c  tetris.h
include/: tetris.h
src/: block.c  board.c  logic.c  main.c  manage.c  score.c
